<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#673AB7"
tools:context="com.example.beatmatch.AccelerometerSensor">

<TextView
    android:text="@string/accelerometerIntroText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:layout_marginTop="114dp"
    android:id="@+id/accelerometerIntroId"
    android:textStyle="bold"
    android:textSize="27sp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"/>

<TextView
    android:text="@string/xValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_below="@+id/accelerometerIntroId"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp"
    android:id="@+id/xValueId"
    android:textSize="18sp"/>

<TextView
    android:text="@string/yValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="#EDE7F6"
    android:layout_below="@+id/xValueId"
    android:layout_alignRight="@+id/xValueId"
    android:layout_alignEnd="@+id/xValueId"
    android:layout_marginTop="43dp"
    android:id="@+id/yValueId"
    android:textSize="18sp"/>

<TextView
    android:text="@string/zValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_marginTop="46dp"
    android:id="@+id/zValueId"
    android:textSize="18sp"
    android:layout_below="@+id/yValueId"
    android:layout_centerHorizontal="true"/>

<TextView
    android:text="@string/zValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_marginTop="49dp"
    android:id="@+id/timeValueId"
    android:textSize="18sp"
    android:layout_below="@+id/zValueId"
    android:layout_centerHorizontal="true"/>

<TextView
    android:text="@string/zValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_marginTop="52dp"
    android:id="@+id/LastStepValueId"
    android:textSize="18sp"
    android:layout_below="@+id/timeValueId"
    android:layout_centerHorizontal="true"/>

<TextView
    android:text="@string/zValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_marginTop="55dp"
    android:id="@+id/TempoValueId"
    android:textSize="18sp"
    android:layout_below="@+id/LastStepValueId"
    android:layout_centerHorizontal="true"/>

<TextView
    android:text="@string/zValueText"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:textAlignment="center"
    android:layout_marginTop="58dp"
    android:id="@+id/LoopTimeValueId"
    android:textSize="18sp"
    android:layout_below="@+id/TempoValueId"
    android:layout_centerHorizontal="true"/>


    <!--<LinearLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginTop="200dp">-->

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:textAlignment="center"
        android:textSize="30sp" />

    <!--<Button-->
        <!--android:id="@+id/Start"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="startChronometer"-->
        <!--android:text="start"-->
        <!--android:textAlignment="center" />-->

    <!--<Button-->
        <!--android:id="@+id/pause"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="pauseChronometer"-->
        <!--android:text="Pause"-->
        <!--android:textAlignment="center" />/>-->

    <!--<Button-->
        <!--android:id="@+id/reset"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="resetChronometer"-->
        <!--android:text="Reset" />-->


<TextView
    android:text="@string/accelerometerInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#EDE7F6"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="37dp"
    android:id="@+id/infoTextId"
    android:textSize="18sp"
    android:layout_marginTop="600dp"/>

    <Button
        android:id="@+id/start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startChronometer"
        android:text="Start"
        tools:text="Start" />
</android.widget.RelativeLayout>


